--- a/index.html
+++ b/index.html
@@ -8,24 +8,22 @@
     <link href="css/style.css" rel="stylesheet">
     <link rel="icon" href="img/logo.png" type="image/x-icon">
 	<link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
+    <script src="js/jquery-3.2.1.min.js"></script>
+    <script src="js/notUpload.js"></script>
 
 </head>
 <body>
-	<form id="login">
+<form id="login" action="user/autorization.php" method="POST">
     <h1>Форма входу</h1>
     <fieldset id="inputs">
-        <input id="username" type="text" placeholder="E-mail" autofocus required>   
-        <input id="password" type="password" placeholder="Pass" required>
+        <input id="username" name="username" type="text" placeholder="Your login" autofocus required>
+        <input id="password" name="password" type="password" placeholder="Pass" required>
     </fieldset>
     <fieldset id="actions">
-        <input type="submit" id="submit" value="ЗАЙТИ">
+        <input type="submit" name="submit" id="submit" value="ЗАЙТИ">
         <a href="">Забули пароль?</a><a href="regist/regist.html">Регистрація</a>
     </fieldset>
 </form>
-
-
-
-
 
 </body>
 </html>
